@@ -2,7 +2,7 @@ name = Data-Validation
 
 [Prereqs]
 perl              = 5.010001
-namespace::sweep  = 0.006
+namespace::autoclean = 0.19
 Email::Valid      = 0.184
 Exporter::Tiny    = 0.026
 LWP::UserAgent    = 2.036
