@@ -1,8 +1,8 @@
 package Data::Validation;
 
 use 5.010001;
-use namespace::sweep;
-use version; our $VERSION = qv( sprintf '0.15.%d', q$Rev: 1 $ =~ /\d+/gmx );
+use namespace::autoclean;
+use version; our $VERSION = qv( sprintf '0.15.%d', q$Rev: 2 $ =~ /\d+/gmx );
 
 use Moo;
 use Data::Validation::Constants;
@@ -155,7 +155,7 @@ Data::Validation - Filter and validate data values
 
 =head1 Version
 
-Describes version v0.15.$Rev: 1 $ of L<Data::Validation>
+Describes version v0.15.$Rev: 2 $ of L<Data::Validation>
 
 =head1 Synopsis
 
