@@ -1,5 +1,7 @@
 Revision history for Data::Validation
 
+          - Replaced namespace::sweep with autoclean
+
 0.15.1    2014-01-31 23:36:09
           - Added exception classes
           - Removed Ident lines
